--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="pause-menu" class="hidden">
         <h1 id="pause-text">Pause</h1>
         <button id="resume-btn">Reprendre</button>
-        <button id="restart-btn">Recommencer</button>
+        <button id="restart-btn-pause">Recommencer</button>
         <button id="main-menu-btn">Menu Principal</button>
         <button id="sound-btn">🔉</button>
     </div>
@@ -57,6 +57,7 @@
     <div class="audio">
         <audio id="menu-music" src="sounds/menu.mp3" preload="auto" loop></audio>
         <audio id="game-music" src="sounds/game.mp3" preload="auto" loop></audio>
+        <audio id="game-over-music" src="sounds/game-over.mp3" preload="auto"></audio>
     </div>
     <script src="script.js" defer></script>
 </body>
